add / 画像入りのフォルダをドラッグアンドドロップでロードする機能を実装

--- a/ImageChecker/ImageChecker.csproj
+++ b/ImageChecker/ImageChecker.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\DragAndDropBehavior.cs" />
     <Compile Include="Models\ImageFile.cs" />
     <Compile Include="Models\ImageLoader.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
