add / ImageLoader の中の Image リストの一つを表すクラスを追加

--- a/ImageChecker/ImageChecker.csproj
+++ b/ImageChecker/ImageChecker.csproj
@@ -67,6 +67,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\DragAndDropBehavior.cs" />
+    <Compile Include="Models\ImageContainer.cs" />
     <Compile Include="Models\ImageFile.cs" />
     <Compile Include="Models\ImageLoader.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
