--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -18,4 +18,12 @@
       <ProjectReference Include="..\ImageChecker\ImageChecker.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Models\PositionConverterTest.cs" />
+    </ItemGroup>
+
 </Project>
